unpackaged/main/default/objects/Billing_Product__c/Billing_Product__c.object-meta.xml
<CustomObject>
    <label>Billing Product</label>
    <nameField>
        <displayFormat>BP-{YY}{MM}{000000}</displayFormat>
        <label>Billing Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>