unpackaged/main/default/objects/Billing_Product__c/fields/Any_of_these_groups__c.field-meta.xml
<CustomField>
    <fullName>Any_of_these_groups__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Any of these groups?</label>
    <type>Checkbox</type>
</CustomField>