unpackaged/main/default/objects/Billing_Product__c/fields/axcessa_Platform_Engagement__c.field-meta.xml
<CustomField>
    <fullName>axcessa_Platform_Engagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>axcessa Store</label>
    <referenceTo>axcessa_Platform_Engagement__c</referenceTo>
    <relationshipLabel>Billing Products</relationshipLabel>
    <relationshipName>Billing_Products</relationshipName>
    <type>Lookup</type>
</CustomField>