unpackaged/main/default/objects/Billing_Product__c/fields/Billing_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account_Name__c</fullName>
    <description>Used for datatable in Candidate Management flow</description>
    <formula>Billing_Account__r.Name</formula>
    <label>Billing Account Name</label>
    <type>Text</type>
</CustomField>