unpackaged/main/default/objects/Billing_Product__c/fields/Billing_Product_Notes__c.field-meta.xml
<CustomField>
    <fullName>Billing_Product_Notes__c</fullName>
    <label>Billing Product Notes</label>
    <length>130000</length>
    <type>Html</type>
</CustomField>