unpackaged/main/default/objects/Billing_Product__c/fields/Billing_Product_Status__c.field-meta.xml
<CustomField>
    <fullName>Billing_Product_Status__c</fullName>
    <label>Billing Product Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Waiting on Sign Off</fullName>
            </value>
            <value>
                <fullName>Reconciliation</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Sale Cancelled</fullName>
            </value>
            <value>
                <fullName>Pending Sale</fullName>
            </value>
            <value>
                <fullName>Non-Billable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>