unpackaged/main/default/objects/Billing_Product__c/fields/Billing_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Billing_Product_Type__c</fullName>
    <label>Billing Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Revenue_Type</valueSetName>
    </valueSet>
</CustomField>