unpackaged/main/default/objects/Billing_Product__c/fields/Billing_Product_URL__c.field-meta.xml
<CustomField>
    <fullName>Billing_Product_URL__c</fullName>
    <formula>&quot;/&quot; &amp; Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Product URL (Code)</label>
    <type>Text</type>
</CustomField>