unpackaged/main/default/objects/Billing_Product__c/fields/BillingProductID_18__c.field-meta.xml
<CustomField>
    <fullName>BillingProductID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BillingProductID(18)</label>
    <type>Text</type>
</CustomField>