unpackaged/main/default/objects/Billing_Product__c/fields/CEM_Id_18__c.field-meta.xml
<CustomField>
    <fullName>CEM_Id_18__c</fullName>
    <label>CM Id (18)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>