unpackaged/main/default/objects/Billing_Product__c/fields/CEM_Id__c.field-meta.xml
<CustomField>
    <fullName>CEM_Id__c</fullName>
    <formula>Product_Service__r.CM_Id__c</formula>
    <label>CM Id (Code)</label>
    <type>Text</type>
</CustomField>