unpackaged/main/default/objects/Billing_Product__c/fields/CEM_Name__c.field-meta.xml
<CustomField>
    <fullName>CEM_Name__c</fullName>
    <formula>Product_Service__r.CM_Name__c</formula>
    <label>CM Name (Code)</label>
    <type>Text</type>
</CustomField>