unpackaged/main/default/objects/Billing_Product__c/fields/CEM_Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>CEM_Parent_Id__c</fullName>
    <formula>Product_Service__r.CM_Parent_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CM Parent Id</label>
    <type>Text</type>
</CustomField>