unpackaged/main/default/objects/Billing_Product__c/fields/CEM_Parent_Id_Code__c.field-meta.xml
<CustomField>
    <fullName>CEM_Parent_Id_Code__c</fullName>
    <description>storage place for CaseSafeId</description>
    <label>CM Parent Id (Code)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>