unpackaged/main/default/objects/Billing_Product__c/fields/CEM_Structure__c.field-meta.xml
<CustomField>
    <fullName>CEM_Structure__c</fullName>
    <formula>Product_Service__r.CM_Structure__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CM Structure</label>
    <type>Text</type>
</CustomField>