unpackaged/main/default/objects/Billing_Product__c/fields/Client_Case_Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>Client_Case_Last_Modified__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the last Case to have modified the Billing Product</description>
    <label>Client Case Last Modified</label>
    <referenceTo>Client_Support_Ticket__c</referenceTo>
    <relationshipLabel>Billing Products (Client Case Last Modified)</relationshipLabel>
    <relationshipName>Billing_Products_Last_Modified</relationshipName>
    <type>Lookup</type>
</CustomField>