unpackaged/main/default/objects/Billing_Product__c/fields/Cohort_Student__c.field-meta.xml
<CustomField>
    <fullName>Cohort_Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cohort Student</label>
    <referenceTo>Cohort_Student__c</referenceTo>
    <relationshipLabel>Billing Products</relationshipLabel>
    <relationshipName>Billing_Products</relationshipName>
    <type>Lookup</type>
</CustomField>