unpackaged/main/default/objects/Billing_Product__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <description>Truncate Name to match WinMaster 40 char limit</description>
    <label>Company</label>
    <length>40</length>
    <type>Text</type>
</CustomField>