unpackaged/main/default/objects/Billing_Product__c/fields/Dimension_3__c.field-meta.xml
<CustomField>
    <fullName>Dimension_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dimension 3</label>
    <referenceTo>c2g__codaDimension3__c</referenceTo>
    <relationshipLabel>Billing Products</relationshipLabel>
    <relationshipName>Billing_Products</relationshipName>
    <type>Lookup</type>
</CustomField>