unpackaged/main/default/objects/Billing_Product__c/fields/Echo_Store__c.field-meta.xml
<CustomField>
    <fullName>Echo_Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Echo Store</label>
    <referenceTo>Echo_Store__c</referenceTo>
    <relationshipLabel>Billing Products</relationshipLabel>
    <relationshipName>Billing_Products</relationshipName>
    <type>Lookup</type>
</CustomField>