unpackaged/main/default/objects/Billing_Product__c/fields/Engagement_Attendee__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Attendee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engagement Attendee</label>
    <referenceTo>Engagement_Attendee__c</referenceTo>
    <relationshipLabel>Billing Products</relationshipLabel>
    <relationshipName>Billing_Products</relationshipName>
    <type>Lookup</type>
</CustomField>