unpackaged/main/default/objects/Billing_Product__c/fields/Estimated_Lifetime_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Lifetime_Revenue__c</fullName>
    <formula>CASE(
    TEXT( Billing_Frequency__c ),

    &quot;Annually&quot;, 
    IF(
        (
            YEAR(Lifetime_Revenue_End_Date__c) - YEAR(Product_Service__r.Start_Date__c)
        ) &lt; 1,
        1,
        (
            YEAR(Lifetime_Revenue_End_Date__c) - YEAR(Product_Service__r.Start_Date__c)
        )
    ),

    &quot;Quarterly&quot;, 
    IF(
        FLOOR(
            (
                (
                    (
                        YEAR(Lifetime_Revenue_End_Date__c) - YEAR(Product_Service__r.Start_Date__c)
                    ) * 12
                ) + 
                (
                    MONTH(Lifetime_Revenue_End_Date__c) - MONTH(Product_Service__r.Start_Date__c)
                )
            ) / 3
        ) &lt; 1,
        1,
        (
            (
                (
                    YEAR(Lifetime_Revenue_End_Date__c) - YEAR(Product_Service__r.Start_Date__c)
                ) * 12
            ) + 
            (
                MONTH(Lifetime_Revenue_End_Date__c) - MONTH(Product_Service__r.Start_Date__c)
            )
        ) / 3
    ),

    &quot;Monthly&quot;, 
    (
        (
            YEAR(Lifetime_Revenue_End_Date__c) - YEAR(Product_Service__r.Start_Date__c)
        ) * 12
    ) + 
    (
        MONTH(Lifetime_Revenue_End_Date__c) - MONTH(Product_Service__r.Start_Date__c)
    ),

    1
) * Total_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Lifetime Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>