unpackaged/main/default/objects/Billing_Product__c/fields/Final_Bill_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Bill_Date__c</fullName>
    <label>Final Bill Date</label>
    <type>Date</type>
</CustomField>