unpackaged/main/default/objects/Billing_Product__c/fields/Financial_Statement_Type__c.field-meta.xml
<CustomField>
    <fullName>Financial_Statement_Type__c</fullName>
    <label>Financial Statement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
                <default>true</default>
                <label>Not Applicable</label>
            </value>
            <value>
                <fullName>A_BUSCH</fullName>
            </value>
            <value>
                <fullName>ACURA</fullName>
            </value>
            <value>
                <fullName>ARNET</fullName>
            </value>
            <value>
                <fullName>AUDI</fullName>
            </value>
            <value>
                <fullName>AUTO_AUCTION</fullName>
            </value>
            <value>
                <fullName>AUTO_RECYCLING</fullName>
            </value>
            <value>
                <fullName>AUTOMASTER</fullName>
            </value>
            <value>
                <fullName>AVB_1</fullName>
            </value>
            <value>
                <fullName>BEER_WHSL</fullName>
            </value>
            <value>
                <fullName>BENTLEY</fullName>
            </value>
            <value>
                <fullName>BETTER_BUSINESS</fullName>
            </value>
            <value>
                <fullName>BHPH_FIXED</fullName>
            </value>
            <value>
                <fullName>BMW</fullName>
            </value>
            <value>
                <fullName>BMW_MOTORCYCLE</fullName>
            </value>
            <value>
                <fullName>BTA_1</fullName>
            </value>
            <value>
                <fullName>BUICK</fullName>
            </value>
            <value>
                <fullName>BUY_PAY_HERE</fullName>
            </value>
            <value>
                <fullName>CA_ACURA</fullName>
            </value>
            <value>
                <fullName>CA_AUDI</fullName>
            </value>
            <value>
                <fullName>CA_BMW</fullName>
            </value>
            <value>
                <fullName>CA_CHEVROLET</fullName>
            </value>
            <value>
                <fullName>CA_CHRYSLER</fullName>
            </value>
            <value>
                <fullName>CA_COLLISION</fullName>
            </value>
            <value>
                <fullName>CA_FORD</fullName>
            </value>
            <value>
                <fullName>CA_HARLEY</fullName>
            </value>
            <value>
                <fullName>CA_HONDA</fullName>
            </value>
            <value>
                <fullName>CA_HYUNDAI</fullName>
            </value>
            <value>
                <fullName>CA_INFINITI</fullName>
            </value>
            <value>
                <fullName>CA_KIA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>