unpackaged/main/default/objects/Billing_Product__c/fields/First_Billed__c.field-meta.xml
<CustomField>
    <fullName>First_Billed__c</fullName>
    <label>First Billed</label>
    <type>Date</type>
</CustomField>