unpackaged/main/default/objects/Billing_Product__c/fields/First_Data_Month__c.field-meta.xml
<CustomField>
    <fullName>First_Data_Month__c</fullName>
    <label>First Data Month</label>
    <type>Date</type>
</CustomField>