unpackaged/main/default/objects/Billing_Product__c/fields/Healthcheck_Instance__c.field-meta.xml
<CustomField>
    <fullName>Healthcheck_Instance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Healthcheck Instance</label>
    <referenceTo>Healthcheck_Instance__c</referenceTo>
    <relationshipLabel>Billing Products</relationshipLabel>
    <relationshipName>Billing_Products</relationshipName>
    <type>Lookup</type>
</CustomField>