unpackaged/main/default/objects/Billing_Product__c/fields/Is_Deposit_Split_Bill__c.field-meta.xml
<CustomField>
    <fullName>Is_Deposit_Split_Bill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Deposit / Payment Terms?</label>
    <type>Checkbox</type>
</CustomField>