unpackaged/main/default/objects/Billing_Product__c/fields/IsMailingException_Code__c.field-meta.xml
<CustomField>
    <fullName>IsMailingException_Code__c</fullName>
    <formula>if(Shipping_Street__c = X20_Group_Account_Member__r.Shipping_Address__c ,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsMailingException (Code)</label>
    <type>Checkbox</type>
</CustomField>