unpackaged/main/default/objects/Billing_Product__c/fields/Last_Billed_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Billed_Date__c</fullName>
    <label>Last Billed Date</label>
    <type>Date</type>
</CustomField>