unpackaged/main/default/objects/Billing_Product__c/fields/Last_Price_Change__c.field-meta.xml
<CustomField>
    <fullName>Last_Price_Change__c</fullName>
    <inlineHelpText>Date price was last changed</inlineHelpText>
    <label>Last Price Change</label>
    <type>Date</type>
</CustomField>