unpackaged/main/default/objects/Billing_Product__c/fields/Lifetime_Revenue_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Revenue_End_Date__c</fullName>
    <formula>IF(
    ISBLANK( Final_Bill_Date__c ),
    IF(  
        ISBLANK(  Product__r.End_Date__c  ),
        TODAY(),
        Product__r.End_Date__c
    ),
    Final_Bill_Date__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lifetime Revenue End Date (Code)</label>
    <type>Date</type>
</CustomField>