unpackaged/main/default/objects/Billing_Product__c/fields/Needs_Refund__c.field-meta.xml
<CustomField>
    <fullName>Needs_Refund__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs Refund</label>
    <type>Checkbox</type>
</CustomField>