unpackaged/main/default/objects/Billing_Product__c/fields/Next_Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Billing_Date__c</fullName>
    <label>Next Billing Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>