unpackaged/main/default/objects/Billing_Product__c/fields/Originating_Client_Case__c.field-meta.xml
<CustomField>
    <fullName>Originating_Client_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Originating Client Case</label>
    <referenceTo>Client_Support_Ticket__c</referenceTo>
    <relationshipLabel>Billing Products</relationshipLabel>
    <relationshipName>Billing_Products</relationshipName>
    <type>Lookup</type>
</CustomField>