unpackaged/main/default/objects/Billing_Product__c/fields/PendingPriceFalseDate__c.field-meta.xml
<CustomField>
    <fullName>PendingPriceFalseDate__c</fullName>
    <formula>IF( Opportunity_Product__r.Pending_Price__c = FALSE,   Opportunity_Product__r.Ready_for_Commission__c, Opportunity__r.CloseDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PendingPriceFalseDate</label>
    <type>Date</type>
</CustomField>