unpackaged/main/default/objects/Billing_Product__c/fields/Previous_Price__c.field-meta.xml
<CustomField>
    <fullName>Previous_Price__c</fullName>
    <inlineHelpText>Last price prior to the recorded change</inlineHelpText>
    <label>Previous Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>