unpackaged/main/default/objects/Billing_Product__c/fields/Price_Change__c.field-meta.xml
<CustomField>
    <fullName>Price_Change__c</fullName>
    <description>Price change to billing product</description>
    <inlineHelpText>Price change to billing product</inlineHelpText>
    <label>Price Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>