unpackaged/main/default/objects/Billing_Product__c/fields/Price_Change_Difference__c.field-meta.xml
<CustomField>
    <fullName>Price_Change_Difference__c</fullName>
    <formula>Value__c - Previous_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Change Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>