unpackaged/main/default/objects/Billing_Product__c/fields/Product_Discount__c.field-meta.xml
<CustomField>
    <fullName>Product_Discount__c</fullName>
    <formula>if( OR(
RecordType.Name = &quot;NCMi Paid Seats&quot;,
RecordType.Name = &quot;NCMi Training Credit&quot;,
RecordType.Name = &quot;NCMi Cohort Student&quot;),

(Product_Value__c* Quantity__c ) - Total_Value__c ,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>