unpackaged/main/default/objects/Billing_Product__c/fields/Product_GLA__c.field-meta.xml
<CustomField>
    <fullName>Product_GLA__c</fullName>
    <formula>Product__r.c2g__CODASalesRevenueAccount__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product GLA</label>
    <type>Text</type>
</CustomField>