unpackaged/main/default/objects/Billing_Product__c/fields/Product_Run_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Product_Run_Frequency__c</fullName>
    <label>Product Run Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
                <default>true</default>
                <label>Not Applicable</label>
            </value>
            <value>
                <fullName>One Time Run</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>