unpackaged/main/default/objects/Billing_Product__c/fields/Product_Service__c.field-meta.xml
<CustomField>
    <fullName>Product_Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product / Service</label>
    <referenceTo>Product_Service__c</referenceTo>
    <relationshipLabel>Billing Products</relationshipLabel>
    <relationshipName>Billing_Products</relationshipName>
    <type>Lookup</type>
</CustomField>