unpackaged/main/default/objects/Billing_Product__c/fields/Product_Value__c.field-meta.xml
<CustomField>
    <fullName>Product_Value__c</fullName>
    <formula>Product__r.Product_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>