unpackaged/main/default/objects/Billing_Product__c/fields/Production_Run_Type__c.field-meta.xml
<CustomField>
    <fullName>Production_Run_Type__c</fullName>
    <formula>Text(Product__r.Production_Run_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Production Run Type</label>
    <type>Text</type>
</CustomField>