unpackaged/main/default/objects/Billing_Product__c/fields/Proprietary_Account__c.field-meta.xml
<CustomField>
    <fullName>Proprietary_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proprietary Account</label>
    <referenceTo>Proprietary_Account__c</referenceTo>
    <relationshipLabel>Billing Products</relationshipLabel>
    <relationshipName>Billing_Products</relationshipName>
    <type>Lookup</type>
</CustomField>