unpackaged/main/default/objects/Billing_Product__c/fields/Proprietary_Group__c.field-meta.xml
<CustomField>
    <fullName>Proprietary_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proprietary Group</label>
    <referenceTo>Proprietary_Group__c</referenceTo>
    <relationshipLabel>Billing Products</relationshipLabel>
    <relationshipName>Billing_Products</relationshipName>
    <type>Lookup</type>
</CustomField>