unpackaged/main/default/objects/Billing_Product__c/fields/Recovery_GLA__c.field-meta.xml
<CustomField>
    <fullName>Recovery_GLA__c</fullName>
    <formula>Product__r.Recovery_GLA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recovery GLA</label>
    <type>Checkbox</type>
</CustomField>