unpackaged/main/default/objects/Billing_Product__c/fields/Recovery_Product_Created__c.field-meta.xml
<CustomField>
    <fullName>Recovery_Product_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporary field for calculating Recovery in FFA</description>
    <label>Create Recovery Journal</label>
    <type>Checkbox</type>
</CustomField>