unpackaged/main/default/objects/Billing_Product__c/fields/Recurring_Billing_Day__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Billing_Day__c</fullName>
    <label>Recurring Billing Day</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>