unpackaged/main/default/objects/Billing_Product__c/fields/Refund_Processed__c.field-meta.xml
<CustomField>
    <fullName>Refund_Processed__c</fullName>
    <label>Refund Processed</label>
    <type>Date</type>
</CustomField>