unpackaged/main/default/objects/Billing_Product__c/fields/Revenue_Recognition__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Recognition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Revenue Recognition</label>
    <referenceTo>Revenue_Recognition__c</referenceTo>
    <relationshipLabel>Billing Products</relationshipLabel>
    <relationshipName>Billing_Products</relationshipName>
    <type>Lookup</type>
</CustomField>