unpackaged/main/default/objects/Billing_Product__c/fields/Shippable_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Shippable_Product_Code__c</fullName>
    <formula>Product__r.Shipped_Product__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shippable Product (Code)</label>
    <type>Checkbox</type>
</CustomField>