unpackaged/main/default/objects/Billing_Product__c/fields/Shipping_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Country_Code__c</fullName>
    <formula>Shipping_Label_New__r.Shipping_Country_ISO__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Country (Code)</label>
    <type>Text</type>
</CustomField>