unpackaged/main/default/objects/Billing_Product__c/fields/Shipping_Label__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Label__c</fullName>
    <inlineHelpText>Name of Person or Company this shipping is going to.</inlineHelpText>
    <label>Shipping Label (Deprecated)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>