unpackaged/main/default/objects/Billing_Product__c/fields/Shipping_Label_Name__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Label_Name__c</fullName>
    <description>Used for datatable in Candidate Management flow</description>
    <formula>Shipping_Label_New__r.Name</formula>
    <label>Shipping Label Name</label>
    <type>Text</type>
</CustomField>