unpackaged/main/default/objects/Billing_Product__c/fields/Shipping_Label_New__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Label_New__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Label</label>
    <referenceTo>Shipping_Label__c</referenceTo>
    <relationshipLabel>Billing Products</relationshipLabel>
    <relationshipName>Billing_Products</relationshipName>
    <type>Lookup</type>
</CustomField>