unpackaged/main/default/objects/Billing_Product__c/fields/Shipping_Option__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Option__c</fullName>
    <label>Shipping Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digital Delivery</fullName>
            </value>
            <value>
                <fullName>Physical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>